--- a/backend/package.json
+++ b/backend/package.json
@@ -5,11 +5,12 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start" : "node server.js"
+    "start": "node server.js"
   },
   "author": "Saran Pariyar",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2"
   }
 }
